2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* AUTHORS:
	Make initial pass at an AUTHORS list.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* session.c:
	* greeter/Login.c:
	* greeter/Login.h:
	* greeter/LoginP.h:
	* greeter/greet.c:
	* greeter/verify.c:
	Convert PAM code to use full PAM conversation.   Modify greeter to
	allow PAM to prompt for more than just username and password.
	Rely on PAM to initialize Secure RPC & Kerberos credentials when it
	is being used.   (Based on work begun for Sun bug #6398796 
	"Solaris-10: Unable to login thru xdm once password is aged")

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>	

	* dm.c (WaitForChild): 
	* server.c (serverPause): 
	Drop pre-waitpid() support since all POSIX.1-1990 systems have waitpid.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Bump version to 1.0.99 for 1.1 branch.

2006-04-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Version bump: 1.0.4

2006-04-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/verify.c: 
	<http://bugs.opensolaris.org/bugdatabase/view_bug.do?bug_id=6413255>
	Sun bug #6413255: xdm should check for uid 0, not for username of 
	"root", when doing non-console login check

2006-04-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add AC_C_INLINE so we can use "inline" keyword

	* greeter/Login.c: 
	Add "inline" to max function definition

2006-04-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/Login.c: 
	When clearing username & password buffers, zero out the entire buffer,
	not just the first byte, for reduced risk of leaking passwords into
	core dumps.

2006-04-07  Alan Coopersmith  <alan.coopersmith@sun.com>

	* session.c: 
	Xorg bug #4765 <https://bugs.freedesktop.org/show_bug.cgi?id=4765>
	Patch #3555 <https://bugs.freedesktop.org/attachment.cgi?id=3555>
	xdm doesn't work with the pam_krb5 module (call pam_getenvlist