@@ -21,7 +21,7 @@ dnl  PERFORMANCE OF THIS SOFTWARE.
 dnl
 dnl Process this file with autoconf to create configure.
 
-dnl $XdotOrg: app/xdm/configure.ac,v 1.40 2006/04/27 21:21:15 alanc Exp $
+dnl $XdotOrg: app/xdm/configure.ac,v 1.41 2006/06/02 23:12:12 alanc Exp $
 
 AC_PREREQ([2.57])
 AC_INIT(xdm,[1.0.99],[https://bugs.freedesktop.org/enter_bug.cgi?product=xorg],xdm)
@@ -76,8 +76,9 @@ if test "x$HAS_SETUSERCONTEXT" = "xyes" ; then
 		[Define to 1 if you have the 'setusercontext' function.])
 fi
 
-AC_CHECK_FUNCS([daemon])
+AC_CHECK_FUNCS([daemon sigaction])
 AC_CHECK_HEADERS([grp.h])
+AC_TYPE_SIGNAL
 
 XTRANS_CONNECTION_FLAGS
 dnl Sets $SECURE_RPC to "yes" or "no"
